# md2kg

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
md2kg/: __init__.py  builder.py  cli.py  exporter.py  models.py  parser.py
md2kg/converters/: __init__.py  networkx_converter.py
md2kg/loaders/: __init__.py
tests/: __init__.py  builder_test.py  cli_test.py  exporter_test.py  networkx_converter_test.py  parser_test.py
